--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: omega
-description: "A new Flutter project."
+name: cuateapp
+description: "This is an social application by Flutter."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -36,11 +36,11 @@ dependencies:
   cupertino_icons: ^1.0.8
 
   english_words: ^4.0.0
-  go_router: ^15.1.1
+  go_router: ^16.2.4
 
   flutter_bloc: ^9.1.1
-  flutter_riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
+  flutter_riverpod: ^3.0.0
+  riverpod_annotation: ^3.0.0
   
   equatable: ^2.0.3
   dio: ^5.0.0
@@ -50,15 +50,15 @@ dependencies:
   shared_preferences: ^2.2.2
 
   amplify_flutter: ^2.6.1
-  amplify_auth_cognito: ^2.6.1
+  amplify_auth_cognito: ^2.6.5
   amplify_storage_s3: ^2.6.1
-  image: ^3.0.1
+  image: ^4.5.4
   image_picker: ^1.0.7
   path_provider: ^2.1.2
-  file_picker: ^8.1.6
-  permission_handler: ^11.3.0
+  file_picker: ^10.3.3
+  permission_handler: ^12.0.1
 
-  web: ^0.5.1 
+  web: ^1.1.1 
 
 dev_dependencies:
   flutter_test:
@@ -69,12 +69,12 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
   build_runner: ^2.1.0
   json_annotation: ^4.0.0
-  custom_lint: ^0.7.5
-  riverpod_generator: ^2.6.5
-  riverpod_lint: ^2.6.5
+  custom_lint: ^0.8.0
+  riverpod_generator: ^3.0.0
+  riverpod_lint: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
