--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "omega" "\0"
+            VALUE "FileDescription", "cuateapp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "omega" "\0"
+            VALUE "InternalName", "cuateapp" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "omega.exe" "\0"
-            VALUE "ProductName", "omega" "\0"
+            VALUE "OriginalFilename", "cuateapp.exe" "\0"
+            VALUE "ProductName", "cuateapp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
